@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-07-20T16:15:54Z",
-  "count" : 3,
+  "timestamp" : "2022-08-03T08:16:50Z",
+  "count" : 2,
   "count_minmax" : [ 1, 3 ],
-  "count_decinc" : [ -0, +3 ],
+  "count_decinc" : [ -1, +3 ],
   "uniques" : 2,
   "uniques_minmax" : [ 1, 2 ],
   "uniques_decinc" : [ -0, +2 ]
