@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-08-02T16:15:18Z",
+  "timestamp" : "2022-08-03T08:16:50Z",
   "count_outdated" : 424,
   "uniques_outdated" : 229,
   "count" : 453,
-  "uniques" : 244,
+  "uniques" : 245,
   "clones" : [
     {
       "timestamp": "2022-07-20T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
@@ -98,6 +98,13 @@
     },
     {
       "timestamp": "2022-08-02T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-08-03T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
