@@ -4,7 +4,7 @@
   "clones": [
     {
       "timestamp": "2022-07-20T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "uniques": 2
     },
     {
@@ -69,6 +69,11 @@
     },
     {
       "timestamp": "2022-08-02T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-08-03T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
